--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="//cdn.jsdelivr.net/npm/phaser@3.18.1/dist/phaser.js"></script>
     <!-- <script src="./node_modules/phaser/src/phaser.js"></script> -->
     <!-- <script  type="module" src="./js/ship.js"></script> -->
+    <script type="module", src="./js/util.js"></script>
     <script type="module", src="./js/entity.js"></script>
     <script type="module", src="./js/ship.js"></script>
     <script type="module", src="./js/asteroid.js"></script>
