Add a separate scene for UI

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script type="module", src="./js/ship.js"></script>
     <script type="module", src="./js/asteroid.js"></script>
     <script type="module", src="./js/bullet.js"></script>
+    <script type="module", src="./js/uiScene.js"></script>
     <script type="module", src="./js/gameScene.js"></script>
     <script type="module", src="./js/asteroids.js"></script>
 </body>
