Relocate game object files. Modify constructor arguments. Add ship explosion sound

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <!-- <script src="./node_modules/phaser/src/phaser.js"></script> -->
     <!-- <script  type="module" src="./js/ship.js"></script> -->
     <script type="module", src="./js/util.js"></script>
-    <script type="module", src="./js/entity.js"></script>
-    <script type="module", src="./js/ship.js"></script>
-    <script type="module", src="./js/asteroid.js"></script>
-    <script type="module", src="./js/bullet.js"></script>
+    <script type="module", src="./js/game_objects/entity.js"></script>
+    <script type="module", src="./js/game_objects/ship.js"></script>
+    <script type="module", src="./js/game_objects/asteroid.js"></script>
+    <script type="module", src="./js/game_objects/bullet.js"></script>
     <script type="module", src="./js/uiScene.js"></script>
     <script type="module", src="./js/gameScene.js"></script>
     <script type="module", src="./js/asteroids.js"></script>
