--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+        <link rel="icon" href="./favicon.ico" type="image/x-icon" />
 </head>
 <body>
     <script src="//cdn.jsdelivr.net/npm/phaser@3.18.1/dist/phaser.js"></script>
